- Homework06 : Task03 added; - Homework.Utility : FileAssist static class added;

--- a/Homework.Utility/Homework.Utility.csproj
+++ b/Homework.Utility/Homework.Utility.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrayAssist.cs" />
+    <Compile Include="FileAssist.cs" />
     <Compile Include="OutputAssist.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
