- Task 03 New added; - File students.csv added;

--- a/Homework_06/Homework_06/Homework_06.csproj
+++ b/Homework_06/Homework_06/Homework_06.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\..\Homework.Utility\Homework.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="students.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
